Add cypress tests and fix a bug

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,10 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
-    "useDefineForClassFields": true
+    "useDefineForClassFields": true,
+    "types": [
+      "cypress",
+      "node"
+    ]
   }
 }
