--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "scripts": {
     "start": "snowpack dev",
     "build": "snowpack build",
-    "test": "echo \"This template does not include a test runner by default.\" && exit 1"
+    "test": "npx cypress open --e2e --browser chrome"
   },
   "dependencies": {
     "canvas-confetti": "^1.2.0",
@@ -13,6 +13,7 @@
     "@types/canvas-confetti": "^1.0.0",
     "@types/snowpack-env": "^2.3.3",
     "@types/uuid": "^9.0.1",
+    "cypress": "^12.13.0",
     "prettier": "^2.2.1",
     "snowpack": "^3.3.7",
     "typescript": "^4.2.4"
